force-app/main/default/objects/TeamMember__c/TeamMember__c.object-meta.xml
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>