force-app/main/default/objects/TeamMember__c/fields/AlertEmail__c.field-meta.xml
<CustomField>
    <fullName>AlertEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert via Email</label>
    <type>Checkbox</type>
</CustomField>