force-app/main/default/objects/TeamMember__c/fields/AlertSMS__c.field-meta.xml
<CustomField>
    <fullName>AlertSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert via SMS</label>
    <type>Checkbox</type>
</CustomField>