force-app/main/default/objects/TeamMember__c/fields/EmailCustom__c.field-meta.xml
<CustomField>
    <fullName>EmailCustom__c</fullName>
    <label>Email (Custom)</label>
    <type>Email</type>
</CustomField>