force-app/main/default/objects/TeamMember__c/fields/IsApprover__c.field-meta.xml
<CustomField>
    <fullName>IsApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approver</label>
    <type>Checkbox</type>
</CustomField>