force-app/main/default/objects/TeamMember__c/fields/IsCellProcessing__c.field-meta.xml
<CustomField>
    <fullName>IsCellProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cell Processing</label>
    <type>Checkbox</type>
</CustomField>