force-app/main/default/objects/TeamMember__c/fields/IsPrescriber__c.field-meta.xml
<CustomField>
    <fullName>IsPrescriber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescriber</label>
    <type>Checkbox</type>
</CustomField>