force-app/main/default/objects/TeamMember__c/fields/IsSubmitter__c.field-meta.xml
<CustomField>
    <fullName>IsSubmitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitter</label>
    <type>Checkbox</type>
</CustomField>