force-app/main/default/objects/TeamMember__c/fields/MobileCustom__c.field-meta.xml
<CustomField>
    <fullName>MobileCustom__c</fullName>
    <label>Mobile (Custom)</label>
    <type>Phone</type>
</CustomField>