force-app/main/default/objects/TeamMember__c/fields/PhoneCustom__c.field-meta.xml
<CustomField>
    <fullName>PhoneCustom__c</fullName>
    <label>Phone (Custom)</label>
    <type>Phone</type>
</CustomField>