force-app/main/default/objects/TeamMember__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <formula>IF(IsPrescriber__c,"Prescriber;"," ")&amp;
IF(IsApprover__c,"Approver;"," ")&amp;
IF(IsSubmitter__c,"Submitter;"," ")&amp;
IF(IsCellProcessing__c,"CellProcessing"," ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roles</label>
    <type>Text</type>
</CustomField>