force-app/main/default/objects/TeamMember__c/fields/UseContactDetails__c.field-meta.xml
<CustomField>
    <fullName>UseContactDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to use contact details</inlineHelpText>
    <label>Use Contact Details</label>
    <type>Checkbox</type>
</CustomField>